policies/restrict-registry.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
  annotations:
    policies.kyverno.io/title: Restrict Image Registries
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.3.0
    policies.kyverno.io/subject: Pod   
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: validate-registries
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Image registry is restricted to registry.digitalocean.com/my-private-registry-test"
      pattern:
        spec:
          containers:
          - image: "registry.digitalocean.com/my-private-registry-test/*"
